force-app/main/default/objects/User_Action__c/User_Action__c.object-meta.xml
<CustomObject>
    <label>User Action</label>
    <nameField>
        <displayFormat>UA-{00000000}</displayFormat>
        <label>User Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>