force-app/main/default/objects/User_Action__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition</label>
    <referenceTo>Condition__c</referenceTo>
    <relationshipLabel>User Actions</relationshipLabel>
    <relationshipName>UserActions</relationshipName>
    <type>Lookup</type>
</CustomField>