force-app/main/default/objects/User_Action__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>User</relationshipLabel>
    <relationshipName>User</relationshipName>
    <type>Lookup</type>
</CustomField>