force-app/main/default/objects/User_Action__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>User</relationshipLabel>
    <relationshipName>User</relationshipName>
    <type>Lookup</type>
</CustomField>