force-app/main/default/objects/User_Action__c/fields/Related_SObject_1__c.field-meta.xml
<CustomField>
    <fullName>Related_SObject_1__c</fullName>
    <description>store Ids of records that will</description>
    <label>Related SObject 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>