force-app/main/default/objects/User_Action__c/fields/Related_SObject_1_Description__c.field-meta.xml
<CustomField>
    <fullName>Related_SObject_1_Description__c</fullName>
    <label>Related SObject 1 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>