force-app/main/default/objects/User_Action__c/fields/Related_SObject_2__c.field-meta.xml
<CustomField>
    <fullName>Related_SObject_2__c</fullName>
    <label>Related SObject 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>