force-app/main/default/objects/User_Action__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>User Actions</relationshipLabel>
    <relationshipName>UserActions</relationshipName>
    <type>Lookup</type>
</CustomField>