force-app/main/default/objects/User_Action__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Approval Sent</fullName>
            </value>
            <value>
                <fullName>Proposed Refinance Sent</fullName>
            </value>
            <value>
                <fullName>Loan Conditions Email Sent</fullName>
            </value>
            <value>
                <fullName>Realtor Intake Form Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>